--- a/waitlist.html
+++ b/waitlist.html
@@ -128,7 +128,7 @@
                     <tr style="width: 100%; margin: 0 auto;">
                             <div style="width: 100px; height: 100px; margin: 0 auto;">
                                 <!-- Use the hosted image -->
-                                <img src="{{ server_url }}/static/images/dojikets.png" alt="Dojikets Logo" width="180" style="max-width: 100%;" />
+                                <img src="https://firebasestorage.googleapis.com/v0/b/tolido-d0145.firebasestorage.app/o/logo%2Fdojikets.png?alt=media&token=48a252ac-dfc1-42c4-8640-8a1b0d3fd389" alt="Dojikets Logo" width="180" style="max-width: 100%;" />
                             </div>
                         
                         
